--- a/Source/Medianizer/app/src/main/AndroidManifest.xml
+++ b/Source/Medianizer/app/src/main/AndroidManifest.xml
@@ -71,6 +71,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivityMovie"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".MovieDetail" />
+        <activity android:name=".MovieWebViewActivity"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
