--- a/Source/Medianizer/app/build.gradle
+++ b/Source/Medianizer/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.example.karthik.medianizer"
-        minSdkVersion 23
+        applicationId "com.example.sirisha.mymedianizer"
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -24,9 +24,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.2.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:25.1.1'
 }
